新温度系统半完成状态